--- a/basictemp.html
+++ b/basictemp.html
@@ -28,13 +28,13 @@
 
     .navbar {
       width: 100%;
-      height: 70px;
+      height: 60px;
       display: flex;
       padding: 20px 120px;
       justify-content: space-between;
       align-items: center;
-      background-color: #EDEEF0;
-      color:#6CA9F3;
+      background-color: #116EFA;
+      color:white;
       position: fixed;
       top: 0;
       z-index: 1;
@@ -45,13 +45,14 @@
     }
 
     .navbar .logo {
+      margin-top: -20px;
       font-size: 24px;
       font-weight: 800;
       transition: all 200ms ease-in-out;
     }
 
     .navbar .logo:hover {
-      color: #116EFA;
+      /* color: #303641; */
     }
 
     .navbar .navLinks {
@@ -70,7 +71,7 @@
     }
 
     .navbar .navLinks .navLink:hover {
-      color: #116EFA;
+      color: #303641;
     }
 
     .section {
@@ -100,7 +101,7 @@
     @media screen and (max-width: 768px) {
       .navbar .navLinks {
         position: absolute;
-        top: 70px;
+        top: 60px;
         right: 0;
         background-color: #EDEEF0;
         width: 50%;
@@ -109,6 +110,7 @@
         justify-content: center;
         align-items: center;
         transition: all 200ms;
+        color:#116EFA;
         transform: translatex(100%);
       }
       .navbar .navLinks ul {
