--- a/basictemp.html
+++ b/basictemp.html
@@ -592,7 +592,8 @@
       }
 
       .panel-body {
-        max-height: 80vh;
+        /* max-height: 700px; */
+        height: 700px;
         overflow: auto;
       }
 
@@ -869,11 +870,12 @@
             <div class="card-body">
               <div class="tab-content" id="pills-tabContent">
                 <div class="bs-example">
-                  <div class="panel panel-default">
-                    <div class="panel-body">
+                  <div class="panel panel-default" >
+                    <div class="panel-body" >
                       <iframe
                         src="Parties\Partie1\Exercice1\enonce.html"
                         frameborder="1"
+                       style="height:700px ;"
                         width="100%"
                       >
                       </iframe>
